# konnektoren-mobile-app

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  index-e5a531b478187924.css  index.html  justfile  konnektoren-download-page-240cbdd67bf27ba0.js  konnektoren-download-page-240cbdd67bf27ba0_bg.wasm  snapcraft.yaml  vendors-4d74dde60c5a59f3.css
.github/workflows/: android.yml  deploy-download-page.yml  tauri.yml
app-stores/: appimagehub.md  snapcraft.md
assets/: manifest.json
download-page/: Cargo.toml  Trunk.toml  build.rs  index.html
download-page/src/: app.rs  lib.rs  main.rs
download-page/src/components/: mod.rs  platform_card.rs  release_links.rs
download-page/src/services/: github_api.rs
download-page/styles/: index.css
src/: app.rs  challenge.rs  challenge_effect.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: mod.rs  vibrate_effect.rs
styles/: index.css  justfile  vendors.css
styles/vendors/: .gitignore
