[package]
name = "konnektoren-mobile-app-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "konnektoren_mobile_app_lib"
path = "src/lib.rs"

[[bin]]
name = "konnektoren_mobile_app_ui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4"
yew = { version = "0.21", features = ["csr"] }
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-yew.git", default-features = false, features = [
    "storage",
    "effects",
    "music",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["HtmlAudioElement"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo = "0.3"

[workspace]
members = ["src-tauri"]
