[package]
name = "konnektoren-mobile-app-ui"
version.workspace = true
description.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = "0.3"
yew = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-yew.git", default-features = false, features = [
    "csr",
    "storage",
    "effects",
    "music",
] }

[workspace]
resolver = "2"
members = ["download-page", "src-tauri"]

[workspace.package]
version = "0.1.4"
description = "Mobile App for Konnektoren"

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
