[package]
name = "konnektoren-download-page"
version.workspace = true
edition = "2024"

[dependencies]
yew = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.10"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlElement"] }
js-sys = "0.3"
