[package]
name = "konnektoren-app"
version = "0.1.5"
description = "Konnektoren App for Desktop and Mobile"
authors = ["chriamue"]
edition = "2021"

[lib]
name = "konnektoren_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0.0", features = ["config-json5"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quinn = "0.11.3"
